--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@ h2 {
   font-family: Lato;
 }
 
+li {
+  font-size: 15px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 .body-main {
   background-color: coral;
   padding: 6px 1px;
@@ -24,4 +29,17 @@ h2 {
 
 .center-text {
   text-align: center;
+}
+
+.div_imagen {
+  width: 100%;
+  display: block;
+  margin: auto;
+}
+
+.img_grafico {
+  display: block;
+  border-style: none;
+  margin-left: auto;
+  margin-right: auto;
 }
