--- a/style.css
+++ b/style.css
@@ -8,8 +8,12 @@ li {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.body-main {
+.div-header {
   background-color: coral;
+  width: 100%;
+}
+
+.body-main {
   padding: 6px 1px;
   margin-left: 10%;
   margin-right: 10%;
@@ -18,6 +22,8 @@ li {
 
 .style-head {
   font-size: 20px;
+  padding-left: 25%;
+  width: 100%;
 }
 
 .text-detalle {
